--- a/bower.json
+++ b/bower.json
@@ -18,6 +18,7 @@
     "jquery"           : "2.1.1",
     "foundation"       : "5.4.4",
     "font-awesome"     : "4.2.0",
+    "angular-timeago"  : "0.1.2",
     "angular-resource" : "1.2.26-build.468+sha.a365152"
   }
 }
