--- a/bower.json
+++ b/bower.json
@@ -20,5 +20,8 @@
     "font-awesome"     : "4.2.0",
     "angular-timeago"  : "0.1.2",
     "angular-resource" : "1.2.26-build.468+sha.a365152"
+  },
+  "resolutions": {
+    "angularjs" : "1.2.25"
   }
 }
