--- a/bower.json
+++ b/bower.json
@@ -14,7 +14,7 @@
     "tests"
   ],
   "dependencies" : {
-    "angularjs"        : "1.2.25",
+    "angular"        : "1.2.25",
     "jquery"           : "2.1.1",
     "foundation"       : "5.4.4",
     "font-awesome"     : "4.2.0",
@@ -22,6 +22,6 @@
     "angular-resource" : "1.2.26-build.468+sha.a365152"
   },
   "resolutions": {
-    "angularjs" : "1.2.25"
+    "angular" : "1.2.25"
   }
 }
