--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -25,4 +25,4 @@ test:
 production:
   secret_key_base: <%= ENV["SECRET_KEY_BASE"] %>
   facebook_app_id: <%= ENV["FACEBOOK_APP_ID"]%>
-  facebook_app_secret: <%= ENV["FACEBOOK_PAGE_TOKEN"] %>
+  facebook_app_secret: <%= ENV["FACEBOOK_APP_SECRET"] %>
