--- a/bower.json
+++ b/bower.json
@@ -17,7 +17,7 @@
     "angular"        : "1.2.25",
     "jquery"           : "2.1.1",
     "foundation"       : "5.4.4",
-    "angular-timeago"  : "0.1.2",
+    "moment"           : "2.8.3",
     "angular-resource" : "1.2.26-build.468+sha.a365152"
   },
   "resolutions": {
